# manokwari

./: .gitignore  AUTHORS  DESIGN.md  Dockerfile  HACKING.md  MAINTAINERS  Makefile  Makefile.am  README  Styling.md  autogen.sh  blankon-panel.css  configure.ac  dev_require.sh  main.vala  meson.build  panel-abstract-window.vala  panel-animated-adjustment.vala  panel-applications.vala  panel-button.vala  panel-clock.vala  panel-favorites.vala  panel-horizontal.vala  panel-item.vala  panel-menu-box.vala  panel-menu-content.vala  panel-menu.vala  panel-places.vala  panel-scrollable-content.vala  panel-tray.vala  panel-window.vala
data/: Makefile.am  blankon-panel.css.in  blankon-panel.desktop.in  manokwari.css.in  manokwari.desktop.in  meson.build
files/: meson.build
files/menus/: Makefile.am  manokwari-applications.menu  meson.build
files/sessions/: Makefile.am  blankon-fallback.session  blankon.session  blankon.session.in  meson.build
files/xdg-autostart/: manokwari-nm-applet.desktop  manokwari-screensaver.desktop  meson.build
files/xsessions/: Makefile.am  blankon-fallback.desktop  blankon.desktop  meson.build
po/: LINGUAS  POTFILES.in  POTFILES.skip  en.po  fr.po  gay.po  hu.po  id.po  jv.po  manokwari.pot  meson.build  su.po  tr.po
scripts/: compile-run.sh  deploy.sh  dev_require.sh
src/: Makefile.am  animated-property.vala  helper.vala  main.vala  meson.build  panel-abstract-window.vala  panel-animated-adjustment.vala  panel-button.vala  panel-calendar.vala  panel-clock.vala  panel-desktop-data.vala  panel-desktop-html.vala  panel-desktop-idle-html.vala  panel-desktop-idle.vala  panel-desktop.vala  panel-extra-box.vala  panel-extra-content.vala  panel-extra-html.vala  panel-hotkey.vala  panel-init-webext.vala  panel-item.vala  panel-menu-box.vala  panel-menu-content.vala  panel-menu-favorites.vala  panel-menu-html.vala  panel-menu-xdg.vala  panel-places.vala  panel-screen.vala  panel-scrollable-content.vala  panel-session-manager.vala  panel-shell.vala  panel-socket.vala  panel-tray.vala  panel-user-icon.vala  panel-user.vala  panel-utils.vala  panel-window.vala  panel-xdg-data.vala  panel-xdg-properties.vala  utils.vala  (+1 more)
system/: Makefile.am  README.md  bevel.html  desktop.css  desktop.html  desktop.js  idle.css  idle.html  idle.js  jqm-settings.js  jqm.js  menu.html  menu.js  meson.build  style.css  xml-background.js
system/css/: bevel.css  desktop.css  sessions.css  style.css
system/js/: bevel.js  desktop.js  main.js  menu.js  music-player.js  search.js  time.js  xml2json.js
system/widget/weather/: config.xml
system/widget/weather/css/: owfont-regular.css  owfont-regular.min.css  style.css
system/widget/weather/fonts/: climacons-webfont.eot
system/widget/weather/js/: script.js
vapi/: config.vapi  gdk-3.0.vapi  gtk+-3.0.vapi  indicator3.files  indicator3.gi  indicator3.namespace  indicator3.vapi  javascriptcore.vapi  libwnck-3.0.defines  libwnck-3.0.files  libwnck-3.0.vapi  unique-3.0.files  unique-3.0.vapi  webkit-1.0.vapi  webkitgtk-3.0.vapi  x11.vapi
